Database And Meta
Modified Database And Metadata handling. Leftover eyed3 code may be
present, however the metadata code has moved completely to mutagen

--- a/.gitignore
+++ b/.gitignore
@@ -405,3 +405,4 @@ paket-files/
 *.xsd.cs
 
 # End of https://www.gitignore.io/api/python,database,executable,visualstudio
+PiPlayer_PY/requirements.txt
