End of submaster.

--- a/PiPlayer_PY/config.json
+++ b/PiPlayer_PY/config.json
@@ -1,7 +1,7 @@
 {
   "directories": [
     {
-      "path": "M:/Music",
+      "path": "C:\Users\ModernMAK\Downloads\Amazon-Music-Download_2016-09-07_22-29'",
       "recursive": true
     }
   ],
